--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/iconfont.css">
 </head>
 <body>
     <div class="banner">
@@ -19,6 +20,15 @@
                 <a class="header-left-a1" href="#">请登录</a>
                 <a class="header-left-a2" href="#">免费注册</a>
             </div>
+            <ul class="header-right">
+                <li><a href="#">我的淘宝</a></li>
+                <li><i class="iconfont icon-gouwucheman"></i><a href="#">购物车</a></li>
+                <li><a href="#">收藏夹</a></li>
+                <li><a href="#">手机版</a></li>
+                <li><a href="#">淘宝网</a></li>
+                <li><a href="#">商家支持</a></li>
+                <li><a href="#">网站导航</a></li>
+            </ul>
         </div>
 
     </div>
