--- a/index.html
+++ b/index.html
@@ -21,13 +21,47 @@
                 <a class="header-left-a2" href="#">免费注册</a>
             </div>
             <ul class="header-right">
-                <li><a href="#">我的淘宝</a></li>
-                <li><i class="iconfont icon-gouwucheman"></i><a href="#">购物车</a></li>
-                <li><a href="#">收藏夹</a></li>
-                <li><a href="#">手机版</a></li>
-                <li><a href="#">淘宝网</a></li>
-                <li><a href="#">商家支持</a></li>
-                <li><a href="#">网站导航</a></li>
+                <li class="list-menu">
+                    <a class="arrow1" href="#">
+                        我的淘宝
+                        <span class="arrow"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                            <i class="iconfont icon-gouwucheman"></i>
+                      
+                        购物车
+                    </a>
+                </li>
+                <li class="list-menu">
+                    <a href="#">
+                        收藏夹
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                            <i class="iconfont icon-tel"></i>    
+                        手机版
+                           
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        淘宝网
+                    </a>
+                </li>
+                <li class="list-menu">
+                    <a href="#">
+                        商家支持
+                    </a>
+                </li>
+                <li class="list-menu">
+                    <a href="#">
+                            <i class="iconfont icon-liebiao"></i>   
+                        网站导航
+                    </a>
+                </li>
             </ul>
         </div>
 
