--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
             </div>
             <ul class="header-right">
                 <li class="list-menu">
-                    <a class="arrow1" href="#">
+                    <a href="#">
                         我的淘宝
                         <span class="arrow"></span>
                     </a>
+                    <ul class="sub-list">
+                        <li><a href="#">已买到的宝贝</a></li>
+                        <li><a href="#">已卖出的宝贝</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">
