--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
                 <li class="list-menu">
                     <a href="#">
                         收藏夹
+                        <span class="arrow"></span>
                     </a>
                 </li>
-                <li>
+                <li class="list-tel">
                     <a href="#">
                             <i class="iconfont icon-tel"></i>    
                         手机版
-                           
                     </a>
+                    <div class="sub-qr">
+                        <img src="images/12.png" alt="">
+                    </div>
                 </li>
                 <li>
                     <a href="#">
@@ -58,17 +61,27 @@
                 <li class="list-menu">
                     <a href="#">
                         商家支持
+                        <span class="arrow"></span>
                     </a>
                 </li>
                 <li class="list-menu">
                     <a href="#">
                             <i class="iconfont icon-liebiao"></i>   
                         网站导航
+                        <span class="arrow"></span>
                     </a>
                 </li>
             </ul>
         </div>
 
     </div>
+
+<div class="qw">
+    <div class="wrapper">
+        <img src="images/1.gif" alt="">
+    </div>
+</div>
+
+
 </body>
 </html>
